# NauEngine

./: README.md  init_and_configure_win_vs2022_x64.bat
cmake/defaults/: UsdPackages.cmake
engine/3rdparty_libs/miniaudio/: CMakeLists.txt
engine/core/kernel/include/nau/math/: dag_bounds3.h
engine/core/kernel/include/nau/string/: string.h
engine/core/kernel/include/nau/threading/: thread_local_value.h
engine/core/kernel/include/nau/utils/: typed_flag.h
engine/core/kernel/include/nau/version/: engine_version.h
engine/core/modules/animation/src/components/: animation_component.cpp
engine/core/modules/asset_formats/src/animation/: nanim_asset_container.cpp
engine/core/modules/asset_formats/src/material/: material_asset_container.cpp
engine/core/modules/asset_formats/src/shader/: shader_asset_container.cpp
engine/core/modules/dagorECS/include/daECS/core/: entityManager.h
engine/core/modules/dagorECS/src/core/: entityManager2.cpp
engine/core/modules/graphics/src/daBfg/frontend/: irGraphBuilder.cpp
engine/core/modules/graphics/src/render/: deferredRT.cpp
engine/core/modules/platform_app/src/platform/windows/: windows_window_manager_impl.cpp
engine/core/modules/ui/cocos2d-x/cocos/2d/: CCDrawNode.cpp
engine/core/modules/ui/cocos2d-x/cocos/base/: CCConsole.cpp  ZipUtils.cpp  (+1 more)
engine/core/modules/ui/src/nau_backend/: program_nau.cpp  program_nau.h
engine/core/modules/vfx/src/: vfx_mod_fx_instance.cpp
tools/shared/src/: file_system.cpp
tools/usd_tools/usd_translator/: usd_component_adapter.cpp  usd_prim_translator.cpp  usd_prim_translator.h
(+7 files in other folders)
